# SegFold-AE

./: .dockerignore  .gitignore  Dockerfile  INSTALL.md  LICENSE  README.md  abstract.txt  docker-compose.yml  entrypoint.sh
benchmarks/: generate_cnn_bench.py  generate_suitesparse_bench.py
configs/: ablation-baseline.yaml  ablation-brl-1.yaml  ablation-brl-16.yaml  ablation-brl-2.yaml  ablation-brl-8.yaml  ablation-crossbar.yaml  ablation-folding.yaml  ablation-map-dyntile-csr.yaml  ablation-map-dyntile-ideal.yaml  ablation-map-dyntile-segfold.yaml  ablation-map-dyntile-zero.yaml  ablation-map-paper-csr.yaml  ablation-map-paper-ideal.yaml  ablation-map-paper-nomem-csr.yaml  ablation-map-paper-nomem-ideal.yaml  ablation-map-paper-nomem-segfold.yaml  ablation-map-paper-nomem-zero.yaml  ablation-map-paper-segfold.yaml  ablation-map-paper-zero.yaml  ablation-map-to-csr.yaml  ablation-map-to-ideal.yaml  ablation-map-to-zero.yaml  ablation-multi-b-row-per-row.yaml  ablation-no-k-reordering.yaml  ablation-no-partial-b.yaml  ablation-window-1.yaml  ablation-window-16.yaml  ablation-window-4.yaml  ablation-window-64.yaml  ablation-window-8.yaml  baseline.yaml  breakdown-base.yaml  breakdown-plus-dynmap.yaml  breakdown-plus-folding.yaml  breakdown-plus-tiling.yaml  ramulator2-hbm.yaml  (+10 more)
csegfold/: CMakeLists.txt  IMPLEMENTATION_STATUS.md  README.md
csegfold/.cache/clangd/index/: CacheModel.cpp.29B5C0972DCCEA00.idx  CacheModel.cpp.BD80685E55C03BF6.idx  CacheModel.hpp.0628BB1AC3B0C10C.idx  CacheModel.hpp.9F2FB0832DDD6846.idx  DDR3.cpp.F6656F331C67D633.idx  DDR4-RVRR.cpp.2E4F4D894C4F0DBC.idx  DDR4-VRR.cpp.94D8663B7F013A75.idx  DDR4.cpp.AE8D27D1474C9B6C.idx  DDR5-RVRR.cpp.DA1DB89C9AE09E2E.idx  DDR5-VRR.cpp.63302E69C7771FD1.idx  DDR5.cpp.89157700ED2070D8.idx  HBM.cpp.AF74E82E8C3C0EBD.idx  HBM2.cpp.0FE70AC14BEF4B76.idx  HBM3.cpp.934DF5A1BBDC25E2.idx  IdealBackend.cpp.4FFFD832CE4E859D.idx  IdealBackend.cpp.9D7DF368C93969D4.idx  IdealBackend.hpp.77A0D0CCB6A3FBA4.idx  IdealBackend.hpp.9C753C821E73FADC.idx  LPDDR5.cpp.8A49505580BEF888.idx  MemoryBackend.cpp.52671D82C152D148.idx  MemoryBackend.cpp.BA5B60BA400B4459.idx  MemoryBackend.hpp.1CD17B808CA20C3C.idx  MemoryBackend.hpp.EDCEFC6D7AE02E6B.idx  MemoryRequest.hpp.61E9CEEBC89A8E8A.idx  MemoryRequest.hpp.A1ACACC6A5D7F0E3.idx  RamulatorBackend.cpp.570CA1C7EEFFD2FF.idx  RamulatorBackend.cpp.649EDE2471271D2F.idx  RamulatorBackend.hpp.296D417349B13A25.idx  RamulatorBackend.hpp.F185EAA5269E781D.idx  ablation_runner.cpp.378D1CF716C05BBD.idx  ablation_runner.cpp.9812EDB1CA2D5A53.idx  action.h.35410EB61E781E69.idx  addr_mapper.h.7A1FC069CB9AE6BB.idx  all_bank_refresh.cpp.33C6DD12521A419B.idx  ansicolor_sink-inl.h.D478E16B620E1736.idx  ansicolor_sink.h.BCED541A266C71CB.idx  aqua.cpp.8AB7A663D8B2A6B0.idx  argparse.hpp.4E15A143CF3CD25E.idx  async.cpp.96F937F08B901E12.idx  async.h.52B86650D96BCFA9.idx  (+256 more)
csegfold/configs/: memory_test.yaml  memory_test_ramulator.yaml
csegfold/configs/dram/: DDR4_8Gb_x8_3200.yaml  DDR5_8Gb_x8_4800.yaml  HBM2_8Gb.yaml
csegfold/docs/: memory_backend_issues.md
csegfold/include/csegfold/matrix/: generator.hpp
csegfold/include/csegfold/memory/: CacheModel.hpp  IdealBackend.hpp  MemoryBackend.hpp  MemoryRequest.hpp  RamulatorBackend.hpp  csegfold_ffi.h
csegfold/include/csegfold/modules/: lookuptable.hpp  mapper.hpp  matrixLoader.hpp  memoryController.hpp  module.hpp  pe.hpp  spad.hpp  switch.hpp
csegfold/include/csegfold/simulator/: memoryController.hpp  pe.hpp  segfoldSimulator.hpp  simulator.hpp  switch.hpp
csegfold/src/: main.cpp
csegfold/src/matrix/: generator.cpp
csegfold/src/memory/: CacheModel.cpp  IdealBackend.cpp  MemoryBackend.cpp  RamulatorBackend.cpp  csegfold_ffi.cpp
csegfold/src/modules/: lookuptable.cpp  mapper.cpp  matrixLoader.cpp  memoryController.cpp  module.cpp  pe.cpp  spad.cpp  switch.cpp
csegfold/src/runner/: ablation_runner.cpp
csegfold/src/simulator/: memoryController.cpp  pe.cpp  segfoldSimulator.cpp  simulator.cpp  stats.cpp  switch.cpp
csegfold/tests/: README.md  compare_simulator.py  run_all_tests.sh  test_ablation.cpp  test_b_loader_fifo.cpp  test_compare_python.cpp  test_compare_tiling.cpp  test_e2e_cpp.cpp  test_generator.cpp  test_mapper.cpp  test_matrixLoader.cpp  test_memoryController.cpp  test_memory_backend.cpp  test_pe.cpp  test_perf_config.yaml  test_perf_profile.cpp  test_simulator_fifo_pe.cpp  test_simulator_memoryController.cpp  test_spad.cpp  test_sparse_4x4.cpp  test_stats.cpp  test_suitesparse.cpp  test_switch.cpp  test_switch_simulator.cpp  test_trace.cpp  test_utils.hpp
csegfold/tmp/: run_20260121_182652_513_config.json  run_20260121_182652_513_stats.json  run_20260121_182835_035_config.json  run_20260121_182835_035_stats.json  run_20260121_183046_946_config.json  run_20260121_183127_606_stats.json  run_20260121_183149_141_config.json  run_20260121_183323_652_config.json  run_20260121_183323_652_stats.json  run_20260121_183656_688_config.json  run_20260121_183656_688_stats.json  run_20260121_184107_578_config.json  run_20260121_184107_578_stats.json  run_20260121_184225_537_config.json  run_20260121_184225_537_stats.json  run_20260121_184345_713_stats.json  run_20260121_184551_077_config.json  run_20260121_184625_508_stats.json  run_20260121_185457_291_config.json  run_20260121_185604_610_config.json  run_20260121_185634_388_config.json  run_20260121_185634_388_stats.json  run_20260121_185750_064_config.json  run_20260121_185817_166_config.json  run_20260121_185817_166_stats.json  run_20260121_190203_919_config.json  run_20260121_190510_152_config.json  run_20260121_190556_606_config.json  run_20260121_190627_089_config.json  run_20260121_190716_739_config.json  run_20260121_190716_739_stats.json  run_20260121_192808_915_config.json  run_20260121_192808_915_stats.json  run_20260121_192848_799_config.json  run_20260121_193456_995_stats.json  run_20260121_193540_917_config.json  run_20260121_193540_917_stats.json  run_20260121_193700_604_config.json  run_20260121_193700_604_stats.json  run_20260121_205128_727_stats.json  (+71 more)
csegfold/tools/: animate_trace.py
(+100 files in other folders)
